# dpm-docs

./: .gitignore  .gitlab-ci.yml  README.md  generate_pdf.py  mkdocs.yml  pyproject.toml
docs/: dpm_xl_style_guide.md  index.md  style.css
docs/grammar/: 01-introduction.md
docs/information-model/: 01-introduction.md  02-information-model.md  03-data-selection.md  04-null-treatment.md  05-dpm-ml.md  data-types.md  dpm-ml.md  information-model.md  null-treatment.md
docs/information-model/artifacts/: index.md  recordsets.md
docs/introduction/: dpm-xl-vs-dpm-ml.md  index.md  why.md
docs/operators/: 01-introduction.md  02-general-behaviour.md  03-selection-operators.md  04-numeric-operators.md  05-comparison-operators.md  06-logical-operators.md  07-aggregate-operators.md  08-conditional-operators.md  09-string-operators.md  10-time-operators.md  11-clause-operators.md
dpm-docs/: mkdocs.yml
dpm-docs/docs/information-model/: index.md  operations.md
dpm-docs/docs/introduction/: approach.md
public/: 404.html  index.html
public/information-model/: index.html
public/information-model/artifacts/: index.html
public/information-model/data-selection/: index.html
public/information-model/data-types/: index.html
public/information-model/dpm-ml/: index.html
public/information-model/information-model/: index.html
public/information-model/introduction/: index.html
public/information-model/null-treatment/: index.html
public/information-model/operations/: index.html
public/introduction/: index.html
public/search/: search_index.json
(+8 files in other folders)
